--- a/dist-worker/package.json
+++ b/dist-worker/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amqplib": "^0.5.2",
     "dotenv": "^4.0.0",
-    "puppeteer": "^0.13.0"
+    "puppeteer": "^0.13.0",
+    "request-promise": "^4.2.2"
   }
 }
